# SkillCheckSim

./: CMakeLists.txt
assets/: candy.rgs  lol10.rgs  terminal.rgs
src/: achievements.cpp  achievements.h  gamestates.cpp  gamestates.h  globals.h  help.cpp  help.h  main.cpp  modes.cpp  modes.h  settings.cpp  settings.h  skillcheck.cpp  skillcheck.h  skillcheck_behavior.cpp  skillcheck_behavior.h
